--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.klinkerapps:searchview:2.2.5'
+    implementation 'com.github.xiangtailiang:tablayout:1.0.0'
 }
