--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:preference-v14:23.1.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -30,4 +31,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.klinkerapps:searchview:2.2.5'
     implementation 'com.github.xiangtailiang:tablayout:1.0.0'
+    implementation "androidx.preference:preference:1.1.0"
 }
